--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -57,6 +57,22 @@ blocks:
             - GIT_LFS_SKIP_SMUDGE=1 bundle install
             - bundle exec rubocop
             - bundle exec brakeman -c .brakeman.cfg
+
+  - name: Zeitwerk check
+    task:
+      prologue:
+        commands:
+          - sem-version ruby 2.7
+          - sem-service start mysql 5.7
+          - bundle config set path 'vendor/bundle'
+          - GIT_LFS_SKIP_SMUDGE=1 bundle install
+          - cp config/database.semaphore_2.yml config/database.yml
+          - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"'
+          - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
+          - 'RAILS_ENV=test bin/rails db:migrate'
+      jobs:
+        - name: Zeitwerk preloading
+          commands:
             - bundle exec rails zeitwerk:check
 
   - name: RSpec tests part 1
