--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -7,10 +7,10 @@ agent:
 
 fail_fast:
   stop:
-    when: 'true'
+    when: "true"
 auto_cancel:
   running:
-    when: 'true'
+    when: "true"
 
 global_job_config:
   # Connect secrets to all jobs in the pipeline:
@@ -40,7 +40,7 @@ blocks:
             - sem-version ruby 2.7
             # Bundler requires 'install' to run even though cache has been restored.
             # Installation will not actually run and command and will finish quickly if the cache has been hit:
-            - bundle config set path 'vendor/bundle'
+            - bundle config set path "vendor/bundle"
             - GIT_LFS_SKIP_SMUDGE=1 bundle install
             # Use this to log the actual bundle destination path for Semaphore 2.0 (currently uses Rbenv):
             # - bundle info rake --path
@@ -53,7 +53,7 @@ blocks:
         - name: check style + security
           commands:
             - sem-version ruby 2.7
-            - bundle config set path 'vendor/bundle'
+            - bundle config set path "vendor/bundle"
             - GIT_LFS_SKIP_SMUDGE=1 bundle install
             - bundle exec rubocop
             - bundle exec brakeman -c .brakeman.cfg
@@ -64,12 +64,12 @@ blocks:
         commands:
           - sem-version ruby 2.7
           - sem-service start mysql 5.7
-          - bundle config set path 'vendor/bundle'
+          - bundle config set path "vendor/bundle"
           - GIT_LFS_SKIP_SMUDGE=1 bundle install
           - cp config/database.semaphore_2.yml config/database.yml
-          - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"'
-          - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
-          - 'RAILS_ENV=test bin/rails db:migrate'
+          - curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"
+          - RAILS_ENV=test bin/rails db:rebuild from=test to=test
+          - RAILS_ENV=test bin/rails db:migrate
       jobs:
         - name: Zeitwerk preloading
           commands:
@@ -81,19 +81,19 @@ blocks:
         commands:
           - sem-version ruby 2.7
           - sem-service start mysql 5.7
-          - bundle config set path 'vendor/bundle'
+          - bundle config set path "vendor/bundle"
           - GIT_LFS_SKIP_SMUDGE=1 bundle install
           - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           - chmod +x ./cc-test-reporter
           - cp config/database.semaphore_2.yml config/database.yml
-          - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"'
-          - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
-          - 'RAILS_ENV=test bin/rails db:migrate'
+          - curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"
+          - RAILS_ENV=test bin/rails db:rebuild from=test to=test
+          - RAILS_ENV=test bin/rails db:migrate
           - ./cc-test-reporter before-build
       jobs:
         - name: RSpec - commands
           commands:
-            - 'bundle exec rspec --order rand -f RspecPacmanFormatter::Pacman -t type:command'
+            - bundle exec rspec --order rand -f RspecPacmanFormatter::Pacman -t type:command
             - cache delete cc-command-goggles_api
             - ./cc-test-reporter format-coverage -t simplecov -o coverage/cc-command.json
             - cache store cc-command-goggles_api coverage/cc-command.json
@@ -103,7 +103,7 @@ blocks:
             - env_var: SPECS
               values: [ "spec/api/goggles/a*","spec/api/goggles/b*","spec/api/goggles/c*","spec/api/goggles/f*", "spec/api/goggles/s*", "spec/api/goggles/t*", "spec/api/goggles/u*" ]
           commands:
-            - 'bundle exec rspec --order rand -f RspecPacmanFormatter::Pacman --format RspecJunitFormatter --out coverage/requests-af-su.xml $SPECS'
+            - bundle exec rspec --order rand -f RspecPacmanFormatter::Pacman --format RspecJunitFormatter --out coverage/requests-af-su.xml $SPECS
             - cache delete cc-request-goggles_api-af-su
             - ./cc-test-reporter format-coverage -t simplecov -o coverage/cc-request-af-su.json
             - cache store cc-request-goggles_api-af-su coverage/cc-request-af-su.json
@@ -120,7 +120,7 @@ promotions:
   - name: RSpec tests part 2
     pipeline_file: semaphore_part2.yml
     auto_promote:
-      when: result = 'passed'
+      when: result = "passed"
 
 after_pipeline:
   task:
