--- a/.semaphore/semaphore_part2.yml
+++ b/.semaphore/semaphore_part2.yml
@@ -7,10 +7,10 @@ agent:
 
 fail_fast:
   stop:
-    when: 'true'
+    when: "true"
 auto_cancel:
   running:
-    when: 'true'
+    when: "true"
 
 global_job_config:
   # Connect secrets to all jobs in the pipeline:
@@ -40,7 +40,7 @@ blocks:
             - sem-version ruby 2.7
             # Bundler requires 'install' to run even though cache has been restored.
             # Installation will not actually run and command and will finish quickly if the cache has been hit:
-            - bundle config set path 'vendor/bundle'
+            - bundle config set path "vendor/bundle"
             - GIT_LFS_SKIP_SMUDGE=1 bundle install
             # Use this to log the actual bundle destination path for Semaphore 2.0 (currently uses Rbenv):
             # - bundle info rake --path
@@ -53,14 +53,14 @@ blocks:
         commands:
           - sem-version ruby 2.7
           - sem-service start mysql 5.7
-          - bundle config set path 'vendor/bundle'
+          - bundle config set path "vendor/bundle"
           - GIT_LFS_SKIP_SMUDGE=1 bundle install
           - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           - chmod +x ./cc-test-reporter
           - cp config/database.semaphore_2.yml config/database.yml
-          - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"'
-          - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
-          - 'RAILS_ENV=test bin/rails db:migrate'
+          - curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"
+          - RAILS_ENV=test bin/rails db:rebuild from=test to=test
+          - RAILS_ENV=test bin/rails db:migrate
           - ./cc-test-reporter before-build
       jobs:
         - name: RSpec - API requests I-M
@@ -68,7 +68,7 @@ blocks:
             - env_var: SPECS
               values: [ "spec/api/goggles/i*","spec/api/goggles/l*","spec/api/goggles/m*" ]
           commands:
-            - 'bundle exec rspec --order rand -f RspecPacmanFormatter::Pacman --format RspecJunitFormatter --out coverage/requests-im.xml $SPECS'
+            - bundle exec rspec --order rand -f RspecPacmanFormatter::Pacman --format RspecJunitFormatter --out coverage/requests-im.xml $SPECS
             - cache delete cc-request-goggles_api-im
             - ./cc-test-reporter format-coverage -t simplecov -o coverage/cc-request-im.json
             - cache store cc-request-goggles_api-im coverage/cc-request-im.json
@@ -85,8 +85,8 @@ promotions:
   - name: Code coverage
     pipeline_file: semaphore_coverage_upload.yml
     auto_promote:
-      when: branch = 'master' AND result = 'passed'
+      when: branch = "master" AND result = "passed"
   - name: Docker images
     pipeline_file: semaphore_docker_build.yml
     auto_promote:
-      when: result = 'passed'
+      when: result = "passed"
