moved publish results at the actual end of the pipeline

--- a/.semaphore/semaphore_part2.yml
+++ b/.semaphore/semaphore_part2.yml
@@ -90,3 +90,12 @@ promotions:
     pipeline_file: semaphore_docker_build.yml
     auto_promote:
       when: result = "passed"
+
+after_pipeline:
+  task:
+    jobs:
+      - name: Publish Results
+        commands:
+          # Do this only if needed:
+          # - artifact pull workflow tmp/cucumber
+          - test-results gen-pipeline-report
