--- a/.semaphore/semaphore_coverage_upload.yml
+++ b/.semaphore/semaphore_coverage_upload.yml
@@ -7,10 +7,10 @@ agent:
 
 fail_fast:
   stop:
-    when: "true"
+    when: 'true'
 auto_cancel:
   running:
-    when: "true"
+    when: 'true'
 
 global_job_config:
   # Connect secrets to all jobs in the pipeline:
