--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -120,4 +120,4 @@ promotions:
   - name: RSpec tests part 2
     pipeline_file: semaphore_part2.yml
     auto_promote:
-      when: result = "passed"
+      when: result = 'passed'
