--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -91,12 +91,12 @@ blocks:
           - RAILS_ENV=test bin/rails db:migrate
           - ./cc-test-reporter before-build
       jobs:
-        # - name: RSpec - commands
-        #   commands:
-        #     - bundle exec rspec -t type:command --order rand -f RspecPacmanFormatter::Pacman -f RspecJunitFormatter --out coverage/command.xml
-        #     - cache delete cc-command-goggles_api
-        #     - ./cc-test-reporter format-coverage -t simplecov -o coverage/cc-command.json
-        #     - cache store cc-command-goggles_api coverage/cc-command.json
+        - name: RSpec - commands
+          commands:
+            - bundle exec rspec -t type:command --order rand -f RspecPacmanFormatter::Pacman -f RspecJunitFormatter --out coverage/command.xml
+            - cache delete cc-command-goggles_api
+            - ./cc-test-reporter format-coverage -t simplecov -o coverage/cc-command.json
+            - cache store cc-command-goggles_api coverage/cc-command.json
 
         - name: RSpec requests A-F, S-U
           matrix:
