--- a/.semaphore/semaphore_part2.yml
+++ b/.semaphore/semaphore_part2.yml
@@ -26,9 +26,9 @@ global_job_config:
       - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
       - echo $RAILS_MASTER_KEY > config/master.key
       - mkdir -pv tmp coverage
-      # Make sure we are using Bundler 2+:
-      - gem i bundler
-      # Use GogglesDb::VERSION as master reference here, or force a minor version change to rebuild the cache:
+      - export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")
+      - gem i bundler -v $BUNDLER_VERSION
+      - echo "Current Bundler with version:" && which bundler && bundle --version
       - cache restore bundle-5.20-$(checksum Gemfile.lock)
 
 blocks:
