--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,11 @@ orbs:
   ruby: circleci/ruby@2.0.1
 
 common-config: &common-config
-  parallelism: 2
   working_directory: ~/goggles_api
   shell: /bin/bash --login
-  environment:
-    CI_OUTPUT: /tmp/ci-output
+  # NOTE: make sure ENV vars on CircleCI include CC_TEST_REPORTER_ID
+  #       for CodeClimate test coverage upload!
+  #       (Otherwise the 'upload-coverage' step will fail.)
   docker:
     - image: cimg/ruby:3.1.4-node
       environment:
@@ -23,60 +23,71 @@ common-config: &common-config
         DATABASE_USER: root
         PAGER: cat
 
-common-folder-struct: &common-folder-struct
-  name: Common folders & structure
-  command: |
-    mkdir -p $CI_OUTPUT/rubocop $CI_OUTPUT/brakeman $CI_OUTPUT/rspec tmp coverage
-    echo $RAILS_MASTER_KEY > config/master.key
-    mv config/database_ci.yml config/database.yml
-
 common-db-setup: &common-db-setup
   name: DB setup
   command: |
     sudo apt update
     sudo apt-get install mysql-client
-    curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"
+    mkdir -p tmp ~/test-results ~/test-artifacts
+    echo $RAILS_MASTER_KEY > config/master.key
+    cp ./tmp/test.sql.bz2 db/dump/test.sql.bz2
+    mv config/database_ci.yml config/database.yml
     dockerize -wait tcp://localhost:3306 -timeout 1m
     RAILS_ENV=test bin/rails db:rebuild from=test to=test
     RAILS_ENV=test bin/rails db:migrate
+    ./tmp/cc-test-reporter before-build
 
 jobs:
+  persisted-data:
+    <<: *common-config
+    # parallelism: 1 (no actual need here)
+    steps:
+      - run:
+          name:  Setup persisted data
+          command: |
+            mkdir -p tmp
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./tmp/cc-test-reporter
+            chmod +x ./tmp/cc-test-reporter
+            curl -L -o ./tmp/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - cc-test-reporter
+            - test.sql.bz2
+
   rubocop:
     <<: *common-config
+    # parallelism: 1 (no actual need here)
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
       - ruby/rubocop-check:
           app-dir: ~/goggles_api
+          label: Rubocop
           format: pacman
-          # out-path: $CI_OUTPUT/rubocop/rubocop.xml
 
   brakeman:
     <<: *common-config
+    # parallelism: 1 (no actual need here)
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
       - run:
           name: Brakeman
           command: |
-            bundle exec brakeman -A --except CheckForceSSL
-      # - store_test_results:
-      #     path: $CI_OUTPUT/brakeman
+            bundle exec brakeman -A6q -c .brakeman.cfg
 
   zeitwerk:
     <<: *common-config
+    # parallelism: 1 (no actual need here)
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
+      - attach_workspace:
+          at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
@@ -86,149 +97,282 @@ jobs:
           name: Zeitwerk check
           command: |
             bundle exec rake zeitwerk:check
-      # - store_test_results:
-      #     path: $CI_OUTPUT
+
 
   rspec-A-F:
     <<: *common-config
+    parallelism: 3
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
+      - attach_workspace:
+          at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
       - run:
           <<: *common-db-setup
-      - ruby/rspec-test:
-          app-dir: ~/goggles_api
-          no_output_timeout: 5m
-          # out-path: $CI_OUTPUT/rspec
-          include: spec/**/a*_spec.rb,spec/**/b*_spec.rb,spec/**/c*_spec.rb,spec/**/f*_spec.rb
+      - run:
+          name: RSpec - A..F
+          command: |
+            TEST_FILES=$(circleci tests glob "spec/**/a*_spec.rb,spec/**/b*_spec.rb,spec/**/c*_spec.rb,spec/**/f*_spec.rb" | circleci tests split --split-by=timings)
+            bundle exec rspec --profile 10 --color --order rand \
+                        -f RspecJunitFormatter --out ~/test-results/rspec-a-f.xml \
+                        -f doc -- ${TEST_FILES}
+            ./tmp/cc-test-reporter format-coverage -t simplecov \
+                                   -o "./tmp/codeclimate.rspec-a-f.$CIRCLE_NODE_INDEX.json"
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-artifacts
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - codeclimate.rspec-a-f.*.json
+
 
   rspec-I-L:
     <<: *common-config
+    parallelism: 2
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
+      - attach_workspace:
+          at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
       - run:
           <<: *common-db-setup
-      - ruby/rspec-test:
-          app-dir: ~/goggles_api
-          no_output_timeout: 5m
-          # out-path: $CI_OUTPUT/rspec
-          include: spec/**/i*_spec.rb,spec/**/l*_spec.rb
+      - run:
+          name: RSpec - I..L
+          command: |
+            TEST_FILES=$(circleci tests glob "spec/**/i*_spec.rb,spec/**/l*_spec.rb" | circleci tests split --split-by=timings)
+            bundle exec rspec --profile 10 --color --order rand \
+                        -f RspecJunitFormatter --out ~/test-results/rspec-i-l.xml \
+                        -f doc -- ${TEST_FILES}
+            ./tmp/cc-test-reporter format-coverage -t simplecov \
+                                   -o "./tmp/codeclimate.rspec-i-l.$CIRCLE_NODE_INDEX.json"
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-artifacts
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - codeclimate.rspec-i-l.*.json
+
 
   rspec-M:
     <<: *common-config
+    parallelism: 3
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
+      - attach_workspace:
+          at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
       - run:
           <<: *common-db-setup
-      - ruby/rspec-test:
-          app-dir: ~/goggles_api
-          no_output_timeout: 5m
-          # out-path: $CI_OUTPUT/rspec
-          include: spec/**/m*_spec.rb
+      - run:
+          name: RSpec - M
+          command: |
+            TEST_FILES=$(circleci tests glob "spec/**/m*_spec.rb" | circleci tests split --split-by=timings)
+            bundle exec rspec --profile 10 --color --order rand \
+                        -f RspecJunitFormatter --out ~/test-results/rspec-m.xml \
+                        -f doc -- ${TEST_FILES}
+            ./tmp/cc-test-reporter format-coverage -t simplecov \
+                                   -o "./tmp/codeclimate.rspec-m.$CIRCLE_NODE_INDEX.json"
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-artifacts
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - codeclimate.rspec-m.*.json
 
-  rspec-S:
-    <<: *common-config
-    steps:
-      - checkout
-      - run:
-          <<: *common-folder-struct
-      - ruby/install-deps:
-          app-dir: ~/goggles_api
-          key: goggles_api-v0600
-      - run:
-          <<: *common-db-setup
-      - ruby/rspec-test:
-          app-dir: ~/goggles_api
-          no_output_timeout: 5m
-          # out-path: $CI_OUTPUT/rspec
-          include: spec/**/s*_spec.rb
 
-  rspec-T:
+  rspec-S-T:
     <<: *common-config
+    parallelism: 3
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
+      - attach_workspace:
+          at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
       - run:
           <<: *common-db-setup
-      - ruby/rspec-test:
-          app-dir: ~/goggles_api
-          no_output_timeout: 5m
-          # out-path: $CI_OUTPUT/rspec
-          include: spec/**/t*_spec.rb
+      - run:
+          name: RSpec - S..T
+          command: |
+            TEST_FILES=$(circleci tests glob "spec/**/s*_spec.rb,spec/**/t*_spec.rb" | circleci tests split --split-by=timings)
+            bundle exec rspec --profile 10 --color --order rand \
+                        -f RspecJunitFormatter --out ~/test-results/rspec-s-t.xml \
+                        -f doc -- ${TEST_FILES}
+            ./tmp/cc-test-reporter format-coverage -t simplecov \
+                                   -o "./tmp/codeclimate.rspec-s-t.$CIRCLE_NODE_INDEX.json"
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-artifacts
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - codeclimate.rspec-s-t.*.json
+
 
   rspec-U:
     <<: *common-config
+    parallelism: 2
     steps:
       - checkout
-      - run:
-          <<: *common-folder-struct
+      - attach_workspace:
+          at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
           key: goggles_api-v0600
       - run:
           <<: *common-db-setup
-      - ruby/rspec-test:
-          app-dir: ~/goggles_api
-          no_output_timeout: 5m
-          # out-path: $CI_OUTPUT/rspec
-          include: spec/**/u*_spec.rb
-
-  deploy:
-    # This is an example deploy job, not actually used by the workflow
-    docker:
-      - image: cimg/base:stable
-    steps:
-      # Replace this with steps to deploy to users
       - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
+          name: RSpec - U
+          command: |
+            TEST_FILES=$(circleci tests glob "spec/**/u*_spec.rb" | circleci tests split --split-by=timings)
+            bundle exec rspec --profile 10 --color --order rand \
+                        -f RspecJunitFormatter --out ~/test-results/rspec-u.xml \
+                        -f doc -- ${TEST_FILES}
+            ./tmp/cc-test-reporter format-coverage -t simplecov \
+                                   -o "./tmp/codeclimate.rspec-u.$CIRCLE_NODE_INDEX.json"
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-artifacts
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - codeclimate.rspec-u.*.json
+
+
+  upload-coverage:
+    <<: *common-config
+    # parallelism: 1 (no actual need here)
+    steps:
+      - attach_workspace:
+          at: ~/goggles_api/tmp
+      - run:
+          name: CodeClimate upload
+          command: |
+            echo "*** Persisted contents: ***"
+            ls -l ./tmp
+            ./tmp/cc-test-reporter sum-coverage -o - tmp/codeclimate.*.json | ./tmp/cc-test-reporter upload-coverage --debug --input -
+
+
+  docker-build-production:
+    <<: *common-config
+    # parallelism: 1 (no actual need here)
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/goggles_api/tmp
+      - ruby/install-deps:
+          app-dir: ~/goggles_api
+          key: goggles_api-v0600
+      - run:
+          <<: *common-db-setup
+      - run:
+          name: Docker TAGGED prod
+          command: |
+            echo "Git Tag << pipeline.git.tag >>"
+            echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
+            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
+            docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
+
+
+  docker-build-staging:
+    <<: *common-config
+    # parallelism: 1 (no actual need here)
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/goggles_api/tmp
+      - ruby/install-deps:
+          app-dir: ~/goggles_api
+          key: goggles_api-v0600
+      - run:
+          <<: *common-db-setup
+      - run:
+          name: Docker LATEST staging
+          command: |
+            echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
+            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
+            docker push $DOCKERHUB_USERNAME/goggles-api:latest
+
+
+  # deploy:
+  #   # This is an example deploy job, not actually used by the workflow
+  #   docker:
+  #     - image: cimg/base:stable
+  #   steps:
+  #     # Replace this with steps to deploy to users
+  #     - run:
+  #         name: deploy
+  #         command: '#e.g. ./deploy.sh'
 
 workflows:
-  build:
+  test-build:
     jobs:
-      - brakeman
-      - rubocop
-      - zeitwerk
+      - persisted-data
+      - brakeman:
+          requires:
+            - persisted-data
+      - rubocop:
+          requires:
+            - persisted-data
+      - zeitwerk:
+          requires:
+            - persisted-data
+
       - rspec-A-F:
           requires:
             - brakeman
             - rubocop
+            - zeitwerk
+
       - rspec-I-L:
           requires:
             - brakeman
             - rubocop
+            - zeitwerk
 
       - rspec-M:
           requires:
             - rspec-A-F
-      - rspec-S:
+      - rspec-S-T:
           requires:
             - rspec-I-L
-
-      - rspec-T:
-          requires:
-            - rspec-M
       - rspec-U:
           requires:
-            - rspec-S
+            - rspec-A-F
+
+      - upload-coverage:
+          requires:
+            - rspec-M
+            - rspec-S-T
+            - rspec-U
+
+
+  docker-staging:
+    unless: << pipeline.git.tag >>
+    jobs:
+      - docker-build-staging
+
+  docker-production:
+    when: << pipeline.git.tag >>
+    jobs:
+      - docker-build-production
 
     # - deploy:
     #     requires:
