--- a/Dockerfile.staging
+++ b/Dockerfile.staging
@@ -1,6 +1,6 @@
 # --- Common stuff:
-FROM ruby:2.7.2-alpine AS common_builder
-ENV BUNDLER_VERSION=2.2.7 \
+FROM ruby:3.1.4-alpine3.18 AS common_builder
+ENV BUNDLER_VERSION=2.4.15 \
     INSTALL_PATH=/app
 
 RUN mkdir -p $INSTALL_PATH
