--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,6 +289,7 @@ jobs:
                 sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
             sudo apt-get update
             sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+            sudo service docker start
             mkdir -p tmp
             echo "Git Tag << pipeline.git.tag >>"
             docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
@@ -318,6 +319,7 @@ jobs:
                 sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
             sudo apt-get update
             sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+            sudo service docker start
             mkdir -p tmp
             docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
             docker pull $DOCKERHUB_USERNAME/goggles-api:latest
