sudo update-alternatives --config iptables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -277,19 +277,22 @@ jobs:
           key: goggles_api-v0600
       - run:
           name: Docker TAGGED prod
+          # From dockerhub.org: (DOESN'T WORK)
+          # sudo apt-get update
+          # sudo apt-get install ca-certificates curl gnupg
+          # sudo install -m 0755 -d /etc/apt/keyrings
+          # curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+          # sudo chmod a+r /etc/apt/keyrings/docker.gpg
+          # echo \
+          #     "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+          #     "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
+          #     sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          # sudo apt-get update
+          # sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
           command: |
-            sudo apt-get update
-            sudo apt-get install ca-certificates curl gnupg
-            sudo install -m 0755 -d /etc/apt/keyrings
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-            sudo chmod a+r /etc/apt/keyrings/docker.gpg
-            echo \
-                "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-                "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
-                sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-            sudo apt-get update
-            sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+            sudo update-alternatives --config iptables
             sudo service docker start
+            sudo service docker status
             mkdir -p tmp
             echo "Git Tag << pipeline.git.tag >>"
             docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
@@ -308,18 +311,9 @@ jobs:
       - run:
           name: Docker LATEST staging
           command: |
-            sudo apt-get update
-            sudo apt-get install ca-certificates curl gnupg
-            sudo install -m 0755 -d /etc/apt/keyrings
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-            sudo chmod a+r /etc/apt/keyrings/docker.gpg
-            echo \
-                "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-                "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
-                sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-            sudo apt-get update
-            sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+            sudo update-alternatives --config iptables
             sudo service docker start
+            sudo service docker status
             mkdir -p tmp
             docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
             docker pull $DOCKERHUB_USERNAME/goggles-api:latest
@@ -338,48 +332,6 @@ jobs:
   #         command: '#e.g. ./deploy.sh'
 
 workflows:
-  test-build:
-    jobs:
-      - persisted-data
-      - brakeman:
-          requires:
-            - persisted-data
-      - rubocop:
-          requires:
-            - persisted-data
-      - zeitwerk:
-          requires:
-            - persisted-data
-
-      - rspec-A-F:
-          requires:
-            - brakeman
-            - rubocop
-            - zeitwerk
-
-      - rspec-I-L:
-          requires:
-            - brakeman
-            - rubocop
-            - zeitwerk
-
-      - rspec-M:
-          requires:
-            - rspec-A-F
-      - rspec-S-T:
-          requires:
-            - rspec-I-L
-      - rspec-U:
-          requires:
-            - rspec-A-F
-
-      - upload-coverage:
-          requires:
-            - rspec-M
-            - rspec-S-T
-            - rspec-U
-
-
   docker-staging:
     unless: << pipeline.git.tag >>
     jobs:
@@ -389,6 +341,47 @@ workflows:
     when: << pipeline.git.tag >>
     jobs:
       - docker-build-production
+
+  test-build:
+    jobs:
+      - persisted-data
+      - brakeman:
+          requires:
+            - persisted-data
+      # - rubocop:
+      #     requires:
+      #       - persisted-data
+      # - zeitwerk:
+      #     requires:
+      #       - persisted-data
+
+      # - rspec-A-F:
+      #     requires:
+      #       - brakeman
+      #       - rubocop
+      #       - zeitwerk
+
+      # - rspec-I-L:
+      #     requires:
+      #       - brakeman
+      #       - rubocop
+      #       - zeitwerk
+
+      # - rspec-M:
+      #     requires:
+      #       - rspec-A-F
+      # - rspec-S-T:
+      #     requires:
+      #       - rspec-I-L
+      # - rspec-U:
+      #     requires:
+      #       - rspec-A-F
+
+      # - upload-coverage:
+      #     requires:
+      #       - rspec-M
+      #       - rspec-S-T
+      #       - rspec-U
 
     # - deploy:
     #     requires:
