--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,7 +290,7 @@ jobs:
           # sudo apt-get update
           # sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
           command: |
-            sudo update-alternatives --config iptables
+            sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
             sudo service docker start
             sudo service docker status
             mkdir -p tmp
@@ -311,7 +311,7 @@ jobs:
       - run:
           name: Docker LATEST staging
           command: |
-            sudo update-alternatives --config iptables
+            sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
             sudo service docker start
             sudo service docker status
             mkdir -p tmp
