--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,7 +268,7 @@ jobs:
             ./tmp/cc-test-reporter sum-coverage -o - tmp/codeclimate.*.json | ./tmp/cc-test-reporter upload-coverage --debug --input -
 
 
-  docker-build-production:
+  docker-build:
     <<: *common-config
     steps:
       - checkout
@@ -278,97 +278,71 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
-      - run:
-          name: Docker TAGGED prod
-          command: |
-            echo "Git Tag << pipeline.git.tag >>"
-            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-            docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
-            docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
+      - when:
+          condition: << pipeline.git.tag >>
+          steps:
+            - run:
+                name: Docker TAGGED prod
+                command: |
+                  echo "Git Tag << pipeline.git.tag >>"
+                  echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+                  docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+                  docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
+                  docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
+      - unless:
+          condition: << pipeline.git.tag >>
+          steps:
+            - run:
+                name: Docker LATEST staging
+                command: |
+                  echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+                  docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+                  docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
+                  docker push $DOCKERHUB_USERNAME/goggles-api:latest
 
-
-  docker-build-staging:
-    <<: *common-config
-    steps:
-      - checkout
-      - ruby/install-deps:
-          app-dir: ~/goggles_api
-          key: goggles_api-v0600
-      - setup_remote_docker:
-          version: 20.10.14
-          docker_layer_caching: true
-      - run:
-          name: Docker LATEST staging
-          command: |
-            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-            docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
-            docker push $DOCKERHUB_USERNAME/goggles-api:latest
-
-
-  # deploy:
-  #   # This is an example deploy job, not actually used by the workflow
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     # Replace this with steps to deploy to users
-  #     - run:
-  #         name: deploy
-  #         command: '#e.g. ./deploy.sh'
 
 workflows:
-  docker-staging:
-    unless: << pipeline.git.tag >>
-    jobs:
-      - docker-build-staging
-
-  docker-production:
-    when: << pipeline.git.tag >>
-    jobs:
-      - docker-build-production
-
-  test-build:
+  full-build:
     jobs:
       - persisted-data
       - brakeman:
           requires:
             - persisted-data
-      # - rubocop:
-      #     requires:
-      #       - persisted-data
-      # - zeitwerk:
-      #     requires:
-      #       - persisted-data
+      - rubocop:
+          requires:
+            - persisted-data
+      - zeitwerk:
+          requires:
+            - persisted-data
 
-      # - rspec-A-F:
-      #     requires:
-      #       - brakeman
-      #       - rubocop
-      #       - zeitwerk
+      - rspec-A-F:
+          requires:
+            - brakeman
+            - rubocop
+            - zeitwerk
 
-      # - rspec-I-L:
-      #     requires:
-      #       - brakeman
-      #       - rubocop
-      #       - zeitwerk
+      - rspec-I-L:
+          requires:
+            - brakeman
+            - rubocop
+            - zeitwerk
 
-      # - rspec-M:
-      #     requires:
-      #       - rspec-A-F
-      # - rspec-S-T:
-      #     requires:
-      #       - rspec-I-L
-      # - rspec-U:
-      #     requires:
-      #       - rspec-A-F
+      - rspec-M:
+          requires:
+            - rspec-A-F
+      - rspec-S-T:
+          requires:
+            - rspec-I-L
+      - rspec-U:
+          requires:
+            - rspec-A-F
 
-      # - upload-coverage:
-      #     requires:
-      #       - rspec-M
-      #       - rspec-S-T
-      #       - rspec-U
+      - upload-coverage:
+          requires:
+            - rspec-M
+            - rspec-S-T
+            - rspec-U
 
-    # - deploy:
-    #     requires:
-    #       - rspec
+      - docker-build:
+          requires:
+            - upload-coverage
